<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/transparent_background"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnAddPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_background"
        android:text="@string/add_photo"
        android:textAllCaps="false"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnAddPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_background"
        android:text="@string/add_picture"
        android:textAllCaps="false"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnAddMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_background"
        android:text="@string/add_music"
        android:textAllCaps="false"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnAddVoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_background"
        android:text="@string/add_voice"
        android:textAllCaps="false"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnCancelAttachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/button_background"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textStyle="italic" />

</LinearLayout>