<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/transparent_background"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_background"
        android:text="@string/change_language"
        android:textAllCaps="false"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnChangeTheme"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_background"
        android:text="@string/change_theme"
        android:textAllCaps="false"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnSetPass"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_background"
        android:text="@string/set_password"
        android:textAllCaps="false"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnCancelSettings"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/button_background"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textStyle="italic" />

</LinearLayout>