<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="false">

        <LinearLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/noteDate"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_gravity="start"
                android:gravity="start"
                android:hint="@string/date"
                android:inputType="date" />

            <EditText
                android:id="@+id/noteTitle"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_gravity="start"
                android:gravity="start"
                android:hint="@string/title" />

            <EditText
                android:id="@+id/noteText"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:gravity="start"
                android:hint="@string/text" />

            <ImageButton
                android:id="@+id/btnAddFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_attachment" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnNewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_background"
        android:text="@string/create_new"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>